<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NewsApp</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_news_found">No News Found</string>
    <string name="news_headline_text">Postman got $50 million investment in Round B </string>
    <string name="news_body_text">5 year old Indian startup Postman got $50 million investment in their round B</string>
    <string name="date_text" tools:ignore="ExtraTranslation">Date</string>
    <string name="date_details_text">20/06/19</string>
    <string name="writer_text">Writer:  </string>
    <string name="writer_name_text">Aman Dubey</string>
    <string name="source_text">Source :- </string>
    <string name="source_name_text">BBC</string>
    <string name="time_text">Time:- </string>
    <string name="time_details_text">13:40</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>
    <string name="settings_country_label">Country</string>
    <string name="settings_country_key" translatable="false">country</string>
    <string name="settings_country_default" translatable="false">in</string>

    <string name="settings_category_label">Category</string>
    <string name="settings_category_key" translatable="false">category</string>
    <string name="settings_category_default" translatable="false">general</string>

    <string name="settings_page_size_label">Page Size</string>
    <string name="settings_page_size_key" translatable="false">page_size</string>
    <string name="settings_page_size_default" translatable="false">15</string>

</resources>
